Add bet-type aware AAA chat flow
